fixed form/button and hamburger menu
I fixed the layout of the form and button on the login page to prevent it from jumping around on small screens. Fixed a similar issue for the hamburger menu for all pages.

--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -34,7 +34,7 @@
                 <span class="asad"></span>
             </label>
 
-            <ul class="menu__box">
+            <ul class="menu__box" style="height: 400px;">
                 <li><a class="menu__item" href="/login">login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
                 <li><a class="menu__item" href="/attendance">Attendance</a></li>
@@ -104,7 +104,7 @@
     
 
     <section class="hidden c1 " style="position: relative; top: 150px; display: flex; align-items: center; justify-content: center;">
-        <a class="cta" href="/createE"><button>Create Event</button></a>
+        <a href="/createE"><button class="bigger">Create Event</button></a>
     </section>
 
 
