--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,7 +37,7 @@
                 <span class="asad"></span>
             </label>
 
-            <ul class="menu__box">
+            <ul class="menu__box" style="height: 400px;">
                 <li><a class="menu__item" href="/login">login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
                 <li><a class="menu__item" href="/attendance">Attendance</a></li>
@@ -52,8 +52,8 @@
             <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 100px;">
                 <h2 class="text-center">Welcome to the University Events Portal</h2>
             </div>
-            <div class="col-sm-10 col-md-10 col-xlg-10 hidden c1" style="position:relative; top: 100px;">
-                <div class="card text-center h-100" style="background-color: #32333a">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 100px;">
+                <div class="card text-center" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="card-text">your gateway to engaging university events. Faculty members can effortlessly
                             organize events, while students can seamlessly register for and participate in events that pique
@@ -65,9 +65,9 @@
         </div>
     </div>
 
-    <main style="position: relative; top: -100px;">
+    <main>
         <div class="containerForm hidden c1">
-            <form id="form" action="" method="POST" autocomplete="off">
+            <form id="form" action="" method="POST" autocomplete="off"  style="position: fixed; top: 150px">
                 <h2><strong>Login</strong></h2>
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
@@ -85,9 +85,9 @@
         </div>
 
 
-        <div class="container" style="position: relative; top: -250px;">
+        <div class="container" >
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12">
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 770px; " >
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
                         <button type="button" class="login-with-google-btn bigger" > Sign in with Google </button>
                     </section>
@@ -95,9 +95,9 @@
             </div>
         </div>
 
-        <div class="container" style="position: relative; top: -220px;">
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12">
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 840px; ">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
                         <a class=" bigger" href="/register"><button class="bigger">Registration</button></a>
                     </section>
@@ -105,9 +105,9 @@
             </div>
         </div>
 
-        <div class="container" style="position: relative; top: -190px;">
+        <div class="container" >
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12">
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 910px; ">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
                         <a class=" bigger"><button class="bigger sign-out-btn">Sign Out</button></a>
                     </section>
@@ -115,9 +115,9 @@
             </div>
         </div>
 
-        <div class="container" style="position: relative; top: -120px;">
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12">
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 980px; ">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
                         <a class="cta bigger" id="googleSignOn"><button  type="submit" class="bigger">Google</button></a>
                     </section>
