--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -35,7 +35,7 @@
                 <span class="asad"></span>
             </label>
 
-            <ul class="menu__box">
+            <ul class="menu__box" style="height: 400px;">
                 <li><a class="menu__item" href="/login">login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
                 <li><a class="menu__item" href="/attendance">Attendance</a></li>
