--- a/views/events.ejs
+++ b/views/events.ejs
@@ -19,7 +19,7 @@
         </a>
         <nav>
             <ul class="nav__links">
-                <li><a href="/login">login</a></li>
+                <li><a href="/login">Login</a></li>
                 <li><a href="/events">Events</a></li>
                 <li><a href="/attendance">Attendance</a></li>
                 <li><a href="/report">Report</a></li>
@@ -35,7 +35,7 @@
             </label>
 
             <ul class="menu__box" style="height: 400px;">
-                <li><a class="menu__item" href="/login">login</a></li>
+                <li><a class="menu__item" href="/login">Login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
                 <li><a class="menu__item" href="/attendance">Attendance</a></li>
                 <li><a class="menu__item" href="/report">Report</a></li>
