--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
         </a>
         <nav>
             <ul class="nav__links">
-                <li><a href="/login">login</a></li>
+                <li><a href="/login">Login</a></li>
                 <li><a href="/events">Events</a></li>
                 <li><a href="/attendance">Attendance</a></li>
                 <li><a href="/report">Report</a></li>
@@ -38,7 +38,7 @@
             </label>
 
             <ul class="menu__box" style="height: 400px;">
-                <li><a class="menu__item" href="/login">login</a></li>
+                <li><a class="menu__item" href="/login">Login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
                 <li><a class="menu__item" href="/attendance">Attendance</a></li>
                 <li><a class="menu__item" href="/report">Report</a></li>
@@ -89,7 +89,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 770px; " >
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <button type="button" class="login-with-google-btn bigger" > Sign in with Google </button>
+                        <button type="button" id="googleSignOn" class="login-with-google-btn bigger" > Sign in with Google </button>
                     </section>
                 </div>
             </div>
