Added Course Dropdown

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -64,6 +64,22 @@
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
+                    <label for="course"><strong>Course</strong></label>
+                    <select id="course" name="course">
+                        <option value="seminars">Academic Lectuer/Seminars</option>
+                        <option value="art">Art Exhibitions and Performances</option>
+                        <option value="career">Career Fairs and Networking</option>
+                        <option value="cultural">Cultural Festivals</option>
+                        <option value="food/drink">Food/Drinks</option>
+                        <option value="game">Games/Gaming</option>
+                        <option value="health">Health and Wellness Programs</option>
+                        <option value="party">Social Gatherings and Parties</option>
+                        <option value="sport">Sports</option>
+                        <option value="sClub">Student Club and Organization Meetings</option>
+                    </select>
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
                     <label for="password"><strong>Password</strong></label>
                     <input id="password" name="password" type="password">
                     <div class="error"></div>
