--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,6 @@
             <ul class="nav__links">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/events">Events</a></li>
-                <li><a href="/attendance">Attendance</a></li>
                 <li><a href="/report">Report</a></li>
 
             </ul>
@@ -40,7 +39,6 @@
             <ul class="menu__box" style="height: 400px;">
                 <li><a class="menu__item" href="/login">Login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
-                <li><a class="menu__item" href="/attendance">Attendance</a></li>
                 <li><a class="menu__item" href="/report">Report</a></li>
                 <li><a class="menu__item " href="/contacts"><button class="ext_btn">Contact</button></a></li>
             </ul>
@@ -109,7 +107,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 910px; ">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <a class=" bigger"><button class="bigger sign-out-btn">Sign Out</button></a>
+                        <a class=" bigger"><button id="signOut" class="bigger sign-out-btn">Sign Out</button></a>
                     </section>
                 </div>
             </div>
