Replaced server-side with client-side login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,12 +82,11 @@
             </form>
         </div>
 
-
         <div class="container" >
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 770px; " >
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <button type="button" id="googleSignOn" class="login-with-google-btn bigger" > Sign in with Google </button>
+                        <button type="button" id="googleSignIn" class="login-with-google-btn bigger" > Sign in with Google </button>
                     </section>
                 </div>
             </div>
@@ -117,7 +116,7 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 980px; ">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <a class="cta bigger" id="googleSignOn"><button  type="submit" class="bigger">Google</button></a>
+                        <a class="cta bigger" id="test11"><button  type="submit" class="bigger">Google</button></a>
                     </section>
                 </div>
             </div>
