--- a/views/events.ejs
+++ b/views/events.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="js/Animation.js"></script>
+    <script defer src="js/eventDisplay.js"></script>
     <title>Test</title>
 </head>
 
@@ -80,12 +81,13 @@
                 <thead>
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">Category</th>
                         <th scope="col">Name</th>
-                        <th scope="col">Location</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Image</th>
                         <th scope="col">Description</th>
+                        <th scope="col">Category</th>  
+                        <th scope="col">Location</th>
+                        <th scope="col">Start Date</th>
+                        <th scope="col">End Date</th>
+                        <th scope="col">Image</th>
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
