Added display all events

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="js/Animation.js"></script>
-    <script defer src="js/eventDisplay.js"></script>
+    <script defer type="module" src="js/eventDisplay.js"></script>
     <title>Test</title>
 </head>
 
@@ -92,36 +92,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Sports</td>
-                        <td>Swimming</td>
-                        <td>Canada Water</td>
-                        <td>08/01/24</td>
-                        <td>No_Image</td>
-                        <td>We will be swimming on the day</td>
-                        <td>Join now</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Games/Gaming</td>
-                        <td>MiniGolf</td>
-                        <td>Oxfrod-Street</td>
-                        <td>07/01/24</td>
-                        <td>No_Image</td>
-                        <td>We will be MiniGolfing on the day</td>
-                        <td>Join now</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Food/Drinks</td>
-                        <td>Bar-Hopping</td>
-                        <td>11/01/24</td>
-                        <td>Angle</td>
-                        <td>No_Image</td>
-                        <td>We will be drink alot on the day</td>
-                        <td>Join now</td>
-                    </tr>
                 </tbody>
             </table>
         </div>
