--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="js/Animation.js"></script> 
+    <script defer type="module" src="js/attendEventsDisplay.js"></script>
     <title>Test</title>
 </head>
 
@@ -47,7 +48,7 @@
     <div class="container hidden">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
-                <h2 class="text-center">Welcome to the Your Events</h2>
+                <h2 class="text-center">Welcome to the MyEvents</h2>
             </div>
             <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
@@ -68,29 +69,23 @@
     <main class="hidden c1">
         <div class="table-responsive " style="position: relative; top: 100px;">
             <table class="table table-dark table-striped table-hover caption-top">
-                <caption><strong>List of Your Events</strong></caption>
+                <caption><strong>List of Events</strong></caption>
                 <thead>
                     <tr>
                         <th scope="col"></th>
-                        <th scope="col">Category</th>
                         <th scope="col">Name</th>
-                        <th scope="col">Location</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Image</th>
                         <th scope="col">Description</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Location</th>
+                        <th scope="col">Start Date</th>
+                        <th scope="col">End Date</th>
+                        <th scope="col">Image</th>
+                        <th scope="col">Image</th>
+                        <th scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Sports</td>
-                        <td>Swimming</td>
-                        <td>Canada Water</td>
-                        <td>08/01/24</td>
-                        <td>No_Image</td>
-                        <td>We will be swimming on the day</td>
-                        <td>Remove</td>
                     </tr>
                 </tbody>
             </table>
