--- a/views/events.ejs
+++ b/views/events.ejs
@@ -47,7 +47,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 100px;">
-                <h2 class="text-center">Welcome to the University Events List</h2>
+                <h2 class="text-center">Welcome to the University Events</h2>
             </div>
             <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 100px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
@@ -88,7 +88,7 @@
                         <th scope="col">Start Date</th>
                         <th scope="col">End Date</th>
                         <th scope="col">Image</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody>
