--- a/views/createEvent.ejs
+++ b/views/createEvent.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
-    <script defer src="js/eventCreation.js"></script>
+    <script type="module" defer src="js/eventCreation.js"></script>
     <script defer src="js/Animation.js"></script>
     <title>Test</title>
 </head>
