--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -9,14 +9,14 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/login.js"></script>
     <script defer src="js/Animation.js"></script>
-    <title>Test</title>
+    <title>University Events Manager</title>
 </head>
 
 <body>
 
     <header>
         <a class="nav__links_home" href="/">
-            <h1 class="ani">Uni Auto</h1>
+            <h1 class="ani">University Events Manager</h1>
         </a>
         <nav>
             <ul class="nav__links">
@@ -47,10 +47,10 @@
 
     <div class="container fadein">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 35px;">
                 <h2 class="text-center">Contact Us</h2>
             </div>
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 60px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="card-text">
