--- a/views/events.ejs
+++ b/views/events.ejs
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="js/Animation.js"></script>
     <script defer type="module" src="js/eventDisplay.js"></script>
-    <title>Test</title>
+    <title>University Events Manager</title>
 </head>
 
 <body>
 
     <header>
         <a class="nav__links_home" href="/">
-            <h1 class="ani">Uni Auto</h1>
+            <h1 class="ani">University Events Manager</h1>
+
         </a>
         <nav>
             <ul class="nav__links">
@@ -46,10 +47,10 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 35px;">
                 <h2 class="text-center">Welcome to the University Events</h2>
             </div>
-            <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 60px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="sm-view">
@@ -75,7 +76,7 @@
     </div>
 
     <main class="hidden c2">
-        <div class="table-responsive" style="position: relative; top: 100px;">
+        <div class="table-responsive" style="position: relative; top: 100px; padding-bottom: 10px;">
             <table class="table table-dark table-striped table-hover caption-top">
                 <caption><strong>List of Events</strong></caption>
                 <thead>
