--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/Animation.js"></script>
-    <title>Test</title>
+    <title>University Events Manager</title>
 </head>
 
 <body>
 
     <header>
         <a class="nav__links_home" href="/">
-            <h1 class="ani">Uni Auto</h1>
+            <h1 class="ani">University Events Manager</h1>
+
         </a>
         <nav>
             <ul class="nav__links">
@@ -46,10 +47,10 @@
     <main>
         <div class="container">
             <div class="row justify-content-center hidden">
-                <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
-                    <h2 class="text-center">Welcome to the University Events Portal</h2>
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 35px;">
+                    <h2 class="text-center">Welcome to University Events Manager Portal</h2>
                 </div>
-                <div class="col-sm-6 col-md-8 col-xlg-10" style="position:relative; top: 100px;">
+                <div class="col-sm-6 col-md-8 col-xlg-10" style="position:relative; top: 60px;">
                     <p class="text-center">Enhance your university's event management capabilities with our cloud-based
                         platform, designed to streamline event organization, registration, and attendance tracking for
                         both
@@ -125,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
+                <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px; padding-bottom: 50px;">
                     <div class="card text-center h-100 hidden c4" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Optimize Your University's Event Management</h5>
