--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,18 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script defer type="module" src="js/login.js"></script>
-    <script defer src="js/Animation.js"></script>
-
-    <script type="module" src="js/login.js"></script>
-    
-    <title>Test</title>
+    <script defer src="js/Animation.js"></script>    
+    <title>University Events Manager</title>
 </head>
 
 <body>
 
     <header>
         <a class="nav__links_home" href="/">
-            <h1 class="ani">UniAuto</h1>
+            <h1 class="ani">University Events Manager</h1>
         </a>
         <nav>
             <ul class="nav__links">
@@ -47,10 +44,10 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 35px;">
                 <h2 class="text-center">Welcome to the University Events Portal</h2>
             </div>
-            <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 60px;">
                 <div class="card text-center" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="card-text">your gateway to engaging university events. Faculty members can effortlessly
@@ -65,7 +62,7 @@
 
     <main>
         <div class="containerForm hidden c1">
-            <form id="form" action="" method="POST" autocomplete="off"  style="position: fixed; top: 150px">
+            <form id="form" action="" method="POST" autocomplete="off"  style="position: fixed; top: 125px">
                 <h2><strong>Login</strong></h2>
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
@@ -84,9 +81,9 @@
 
         <div class="container" >
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 770px; " >
-                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <button type="button" id="googleSignIn" class="login-with-google-btn bigger" > Sign in with Google </button>
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 730px; " >
+                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center; ">
+                        <button type="button" id="googleSignIn" class="login-with-google-btn bigger"> Sign in with Google </button>
                     </section>
                 </div>
             </div>
@@ -94,9 +91,9 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 840px; ">
-                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <a class=" bigger" href="/register"><button class="bigger">Registration</button></a>
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 800px; ">
+                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center; ">
+                        <a class=" bigger" href="/register"><button class="bigger">Create an account</button></a>
                     </section>
                 </div>
             </div>
@@ -104,7 +101,7 @@
 
         <div class="container" >
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 910px; ">
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 870px; padding-bottom: 50px;">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
                         <a class=" bigger"><button id="signOut" class="bigger sign-out-btn">Sign Out</button></a>
                     </section>
@@ -112,20 +109,7 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 980px; ">
-                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
-                        <a class="cta bigger" id="test11"><button  type="submit" class="bigger">Google</button></a>
-                    </section>
-                </div>
-            </div>
-        </div>
-
-
     </main>
-
-   
 
 </body>
 
