--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="js/registration.js"></script>
     <script defer src="js/Animation.js"></script>
-    <title>Test</title>
+    <title>University Events Manager</title>
 </head>
 
 <body>
 
     <header>
         <a class="nav__links_home" href="/">
-            <h1 class="ani">UniAuto</h1>
+            <h1 class="ani">University Events Manager</h1>
         </a>
         <nav>
             <ul class="nav__links">
@@ -61,22 +61,6 @@
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
                     <input id="email" name="email" type="text">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="course"><strong>Course</strong></label>
-                    <select id="course" name="course">
-                        <option value="seminars">Academic Lectuer/Seminars</option>
-                        <option value="art">Art Exhibitions and Performances</option>
-                        <option value="career">Career Fairs and Networking</option>
-                        <option value="cultural">Cultural Festivals</option>
-                        <option value="food/drink">Food/Drinks</option>
-                        <option value="game">Games/Gaming</option>
-                        <option value="health">Health and Wellness Programs</option>
-                        <option value="party">Social Gatherings and Parties</option>
-                        <option value="sport">Sports</option>
-                        <option value="sClub">Student Club and Organization Meetings</option>
-                    </select>
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
