--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="js/Animation.js"></script> 
     <script defer type="module" src="js/attendEventsDisplay.js"></script>
-    <title>Test</title>
+    <title>University Events Manager</title>
 </head>
 
 <body>
 
     <header>
         <a class="nav__links_home" href="/">
-            <h1 class="ani">Uni Auto</h1>
+            <h1 class="ani">University Events Manager</h1>
         </a>
         <nav>
             <ul class="nav__links">
@@ -47,10 +47,10 @@
 
     <div class="container hidden">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 35px;">
                 <h2 class="text-center">Welcome to the MyEvents</h2>
             </div>
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 60px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="card-text">
@@ -67,7 +67,7 @@
     </div>
 
     <main class="hidden c1">
-        <div class="table-responsive " style="position: relative; top: 100px;">
+        <div class="table-responsive " style="position: relative; top: 100px; ">
             <table class="table table-dark table-striped table-hover caption-top">
                 <caption><strong>List of Events</strong></caption>
                 <thead>
@@ -91,8 +91,8 @@
         </div>
     </main>
     
-    <section class="hidden c1 " style="position: relative; top: 150px; display: flex; align-items: center; justify-content: center;">
-        <a href="/createyourevent"><button class="bigger">Create Event</button></a>
+    <section class="hidden c1 " style="position: relative; top: 125px; display: flex; align-items: center; justify-content: center; padding-bottom: 50px;">
+        <a href="/eventcreation"><button class="bigger">Create Event</button></a>
     </section>
 
 </body>
