--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script defer type="module" src="js/login.js"></script>
-    <script defer src="js/Animation.js"></script>    
+    <script defer src="js/Animation.js"></script>  
     <title>University Events Manager</title>
 </head>
 
@@ -21,11 +21,13 @@
             <ul class="nav__links">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/events">Events</a></li>
+                <li style="display: none;"><a href="/attendance">Attendance</a></li>
                 <li><a href="/report">Report</a></li>
-
             </ul>
         </nav>
-        <a class="cta" href="/contacts"><button>Contact</button></a>
+
+        <a class="cta" id="logOut" style="display: none;"><button>Log out</button></a>
+
 
         <div class="hamburger-menu" style="background-color: transparent; width: 50px;">
             <input id="menu__toggle" type="checkbox" />
@@ -36,8 +38,9 @@
             <ul class="menu__box" style="height: 400px;">
                 <li><a class="menu__item" href="/login">Login</a></li>
                 <li><a class="menu__item" href="/events">Events</a></li>
+                <li style="display: none;"><a class="menu__item" href="/attendance">Attendance</a></li>
                 <li><a class="menu__item" href="/report">Report</a></li>
-                <li><a class="menu__item " href="/contacts"><button class="ext_btn">Contact</button></a></li>
+                <li><a class="menu__item" id="logOut" style="display: none;"><button class="ext_btn">Log out</button></a></li>
             </ul>
         </div>
     </header>
@@ -79,9 +82,9 @@
             </form>
         </div>
 
-        <div class="container" >
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 730px; " >
+                <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 730px; ">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center; ">
                         <button type="button" id="googleSignIn" class="login-with-google-btn bigger"> Sign in with Google </button>
                     </section>
@@ -99,7 +102,7 @@
             </div>
         </div>
 
-        <div class="container" >
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position: absolute; top: 870px; padding-bottom: 50px;">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
