--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -74,7 +74,7 @@
     <main class="hidden c1">
         <div class="table-responsive " style="position: relative; top: 100px; ">
             <table class="table table-dark table-striped table-hover caption-top">
-                <caption><strong>List of Events</strong></caption>
+                <caption><strong>Attended Events</strong></caption>
                 <thead>
                     <tr>
                         <th scope="col"></th>
@@ -88,7 +88,29 @@
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="attended">
+                    <tr>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table-responsive " style="position: relative; top: 120px; ">
+            <table class="table table-dark table-striped table-hover caption-top">
+                <caption><strong>Created Events</strong></caption>
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Location</th>
+                        <th scope="col">Start Date</th>
+                        <th scope="col">End Date</th>
+                        <th scope="col">Image</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody class="created">
                     <tr>
                     </tr>
                 </tbody>
@@ -96,7 +118,7 @@
         </div>
     </main>
     
-    <section class="hidden c1 " style="position: relative; top: 125px; display: flex; align-items: center; justify-content: center; padding-bottom: 50px;">
+    <section class="hidden c1 " style="position: relative; display: flex; align-items: center; justify-content: center; top: 135px; padding-bottom: 35px;">
         <a href="/eventcreation"><button class="bigger">Create Event</button></a>
     </section>
 
